* Allow to configure the commission formula with the rule engine

Version 1.3 - 2015-01-22
* Module creation