@@ -23,5 +23,11 @@
             <field name="inherit" ref="commission.plan_line_view_list_sequence"/>
             <field name="name">plan_line_list_sequence</field>
         </record>
+        <record model="ir.ui.view" id="agent_view_form">
+            <field name="model">commission.agent</field>
+            <field name="type">form</field>
+            <field name="inherit" ref="commission.agent_view_form"/>
+            <field name="name">agent_form</field>
+        </record>
     </data>
 </tryton>
