@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<data>
+    <xpath expr="/form/field[@name='end_date']" position="after">
+        <field name="extra_data" colspan="2" no_command="1"/>
+    </xpath>
+</data>
