@@ -4,4 +4,7 @@
         <label name="rule_engine_key"/>
         <field name="rule_engine_key"/>
     </xpath>
+    <xpath expr="/form/notebook/page[@id='admin']/field[@name='tags']" position="before">
+        <field name="extra_data_def" colspan="2"/>
+    </xpath>
 </data>
